[gd_scene load_steps=20 format=2]

[ext_resource path="res://img/shadow.png" type="Texture" id=1]
[ext_resource path="res://aseprite-wizard-output/mc.res" type="SpriteFrames" id=2]
[ext_resource path="res://aseprite-wizard-output/legs.res" type="SpriteFrames" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://GameObjects/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://aseprite-wizard-output/left-arm.res" type="SpriteFrames" id=6]
[ext_resource path="res://img/revolver.png" type="Texture" id=7]
[ext_resource path="res://aseprite-wizard-output/torso.res" type="SpriteFrames" id=8]
[ext_resource path="res://aseprite-wizard-output/heart.res" type="SpriteFrames" id=9]

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.50002
height = 7.99996

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.5, 8.5 )

[sub_resource type="Shader" id=18]

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )

[sub_resource type="CircleShape2D" id=20]
radius = 17.0074

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 56.75, 5.5 )

[sub_resource type="Animation" id=23]
resource_name = "CHECK_HEALTH"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/TorsoPivot/Heart:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/TorsoPivot/LeftArm:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/TorsoPivot/LeftArm:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "CHECK" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/TorsoPivot/Heart:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, -9 ), Vector2( 14, -21 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Graphics/TorsoPivot/Heart:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/TorsoPivot/Revolver:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/TorsoPivot/Revolver:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/TorsoPivot/Heart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/TorsoPivot/LeftArm:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Graphics/TorsoPivot/LeftArm:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "MIDDLE" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Graphics/TorsoPivot/Heart:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Graphics/TorsoPivot/Heart:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "SHOOT"
length = 0.3
step = 0.01

[sub_resource type="CircleShape2D" id=25]
radius = 7.07107

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )
movementSpeed = 1.65

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2( 0.5, -0.5 )
rotation = 1.57079
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
material = SubResource( 19 )
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 20 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 2 )
animation = "IDLE"
playing = true
offset = Vector2( 1, -28 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Graphics"]
position = Vector2( 1, 0 )
scale = Vector2( 1.35999, 1 )
texture = ExtResource( 1 )

[node name="Legs" type="AnimatedSprite" parent="Graphics"]
frames = ExtResource( 3 )
animation = "IDLE"
playing = true
offset = Vector2( 1, -28 )

[node name="TorsoPivot" type="Node2D" parent="Graphics"]

[node name="Revolver" type="Sprite" parent="Graphics/TorsoPivot"]
position = Vector2( -2, -14 )
texture = ExtResource( 7 )
offset = Vector2( -9, -1 )

[node name="BulletOrigin" type="Position2D" parent="Graphics/TorsoPivot/Revolver"]
position = Vector2( -19, -3 )

[node name="Raycast" type="Area2D" parent="Graphics/TorsoPivot/Revolver/BulletOrigin" groups=["GunRaycast"]]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/TorsoPivot/Revolver/BulletOrigin/Raycast"]
position = Vector2( -57.25, 0.5 )
shape = SubResource( 24 )

[node name="Torso" type="AnimatedSprite" parent="Graphics/TorsoPivot"]
frames = ExtResource( 8 )
animation = "MIDDLE"
playing = true
offset = Vector2( 1, -28 )

[node name="LeftArm" type="AnimatedSprite" parent="Graphics/TorsoPivot"]
frames = ExtResource( 6 )
animation = "MIDDLE"
offset = Vector2( 1, -28 )

[node name="Heart" type="AnimatedSprite" parent="Graphics/TorsoPivot"]
visible = false
position = Vector2( 0, -10 )
frames = ExtResource( 9 )
frame = 3
playing = true
offset = Vector2( 0, -5 )

[node name="BloodOrigin" type="Position2D" parent="."]
position = Vector2( 0, -11 )

[node name="HealthDropTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="BreadcrumbTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CHECK_HEALTH = SubResource( 23 )
anims/RESET = SubResource( 21 )
anims/SHOOT = SubResource( 22 )

[node name="BloodAbsorbArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloodAbsorbArea"]
modulate = Color( 1, 0.00392157, 0.00392157, 1 )
self_modulate = Color( 1, 0.027451, 0.027451, 1 )
show_behind_parent = true
shape = SubResource( 25 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="HealthDropTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BreadcrumbTimer" to="." method="_on_BreadcrumbTimer_timeout"]

[editable path="Hitbox"]
